# COLLADA2GLTF-passthrough

./: .gitmodules  .travis.yml  CMakeLists.txt  COLLADA2GLTFWriter.cpp  README.md
GLTF/: CMakeLists.txt  GLTFAsset.h
GLTF/include/: GLTFMaterial.h  GLTFNode.h  GLTFOptions.h
GLTF/src/: GLTFAsset.cpp  GLTFMaterial.cpp
include/: COLLADA2GLTFWriter.h
src/: COLLADA2GLTFWriter.cpp  main.cpp
